k8s/kafka/kafka-connect-delpoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect-app
  labels:
    app: kafka-connect-app
  namespace: bigdata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect-app
  template:
    metadata:
      labels:
        app: kafka-connect-app
    spec:
      volumes:
        - name: connect-storage
          persistentVolumeClaim:
            claimName: kafka-connect-pv-claim
      containers:
        - name: kafka-connect-container 
          image: confluentinc/cp-kafka-connect:latest
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: connect-storage
              mountPath: /mnt/connect
