k8s/kafka/kafka-connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-svc
  namespace: bigdata
spec:
  selector:
    app: kafka-connect-app
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
