k8s/kafka/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
  namespace: bigdata
spec:
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
