k8s/kafka/ui-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: bigdata
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: kafka.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-service
                port:
                  number: 8080
